Changed the structure

--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
 
-  <div class="contener">
-    <div class="outer-contener">
-      <div class="inner-contener"></div>
-    </div>
+  <div class="conteiner">
+    <div class="image-conteiner"><img src="/images/image-qr-code.png" alt="qr-code" class="qr-code"></div>
+    <p class="title">Improve your front-end skills by building projects</p>
   </div>
 
 </body>
