--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
   <div class="conteiner">
     <div class="image-conteiner"><img src="/images/image-qr-code.png" alt="qr-code" class="qr-code"></div>
-    <p class="title">Improve your front-end skills by building projects</p>
+    <p class="title">Improve your front-end<br>skills by building projects</p>
+    <p class="description">Scan the QR code to visit Frontend<br>Mentor and take your coding skills to<br>the next level</p>
   </div>
 
 </body>
