Moved the text from the very top to the footer, and improved accessibility

--- a/index.html
+++ b/index.html
@@ -5,21 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | QR code component</title>
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="conteiner">
+  <main>
+    <h1 class="sr-only">QR Card Component</h1>
     <div class="image-conteiner"><img src="/images/image-qr-code.png" alt="qr-code" class="qr-code"></div>
     <p class="title">Improve your front-end<br>skills by building projects</p>
     <p class="description">Scan the QR code to visit Frontend<br>Mentor and take your coding skills to<br>the next level</p>
-  </div>
-  <div class="attribution">
+  </main>
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://www.frontendmentor.io/profile/BarteQS">Bartosz Utratny</a>.
-  </div>
+  </footer>
 </body>
 </html>
