--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <main>
     <h1 class="sr-only">QR Card Component</h1>
     <div class="image-conteiner"><img src="/images/image-qr-code.png" alt="qr-code" class="qr-code"></div>
-    <p class="title">Improve your front-end<br>skills by building projects</p>
+    <p class="title">Improve your front-end</p><p class="title-two">skills by building projects</p>
     <p class="description">Scan the QR code to visit Frontend<br>Mentor and take your coding skills to<br>the next level</p>
   </main>
   <footer class="attribution">
