Added paragraph tags around the footer text

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
   <main>
     <h1 class="sr-only">QR Card Component</h1>
-    <div class="image-conteiner"><img src="/images/image-qr-code.png" alt="qr-code" class="qr-code"></div>
+    <div class="image-conteiner"><img src="/images/image-qr-code.png" alt="QR code to frontendmentor.io" class="qr-code"></div>
     <p class="title">Improve your front-end</p><p class="title-two">skills by building projects</p>
     <p class="description">Scan the QR code to visit Frontend<br>Mentor and take your coding skills to<br>the next level</p>
   </main>
   <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.frontendmentor.io/profile/BarteQS">Bartosz Utratny</a>.
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/BarteQS">Bartosz Utratny</a>.</p>
   </footer>
 </body>
 </html>
