--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 <body>
   <main>
     <h1 class="sr-only">QR Card Component</h1>
-    <div class="image-conteiner"><img src="/images/image-qr-code.png" alt="QR code to frontendmentor.io" class="qr-code"></div>
-    <p class="title">Improve your front-end</p><p class="title-two">skills by building projects</p>
-    <p class="description">Scan the QR code to visit Frontend<br>Mentor and take your coding skills to<br>the next level</p>
+    <img src="/images/image-qr-code.png" alt="QR code to frontendmentor.io" class="qr-code">
+    <p class="title">Improve your front-end</p>
+      <p class="title-two">skills by building projects</p>
+    <p class="description">Scan the QR code to visit Frontend
+      <p class="description">Mentor and take your coding skills to</p>
+      <p class="description">the next level</p>
   </main>
   <footer class="attribution">
     <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
