Changed the flexbox

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
   <main>
-    <h1 class="sr-only">QR Card Component</h1>
-    <div class="image-conteiner"><img src="/images/image-qr-code.png" alt="qr-code" class="qr-code"></div>
-    <p class="title">Improve your front-end<br>skills by building projects</p>
-    <p class="description">Scan the QR code to visit Frontend<br>Mentor and take your coding skills to<br>the next level</p>
+    <!-- <h1 class="sr-only">QR Card Component</h1> -->
+    <div class="card">
+      <img src="/images/image-qr-code.png" alt="qr-code" class="qr-code">
+      <p class="title">Improve your front-end<br>skills by building projects</p>
+      <p class="description">Scan the QR code to visit Frontend<br>Mentor and take your coding skills to<br>the next level</p>
+    </div>
   </main>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
