--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 </head>
 <body>
   <main>
-    <!-- <h1 class="sr-only">QR Card Component</h1> -->
+    <h1 class="sr-only">QR Card Component</h1>
     <div class="card">
-      <img src="/images/image-qr-code.png" alt="qr-code" class="qr-code">
-      <p class="title">Improve your front-end<br>skills by building projects</p>
-      <p class="description">Scan the QR code to visit Frontend<br>Mentor and take your coding skills to<br>the next level</p>
+      <img src="/images/image-qr-code.png" alt="QR code to frontendmentor.io" class="qr-code">
+      <p class="title">Improve your front-end</p>
+        <p class="title-two">skills by building projects</p>
+      <p class="description">Scan the QR code to visit Frontend
+        <p class="description">Mentor and take your coding skills to</p>
+        <p class="description">the next level</p>
     </div>
   </main>
   <footer class="attribution">
